# ethglobal-sf-2024

./: README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: distribution.yml
apps/frontend/: .eslintrc.json  next.config.mjs  package.json  pnpm-lock.yaml
apps/frontend/src/: config.ts  plasmic-init-client.tsx  plasmic-init.ts
apps/frontend/src/components/dataprovider/: auth-router.tsx
apps/frontend/src/components/widgets/: auth-actions.tsx  supabase-write.tsx
apps/frontend/src/lib/clients/: segment.ts  supabase.ts
apps/frontend/src/lib/utils/: common.ts
insights/: ethglobal-sf-2024.ipynb  grinders_fund_data.json  pyproject.toml
