[tool.poetry]
name = "insights"
version = "0.0.0"
description = ""
authors = ["Javier R <javi@karibalabs.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
supabase = "^2.9.1"
githubkit = "^0.11.14"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
